# ROS2archivos

action_definicion/: CMakeLists.txt  package.xml
action_definicion/action/: Angulo.action
action_server_final/: package.xml  setup.cfg  setup.py
action_server_final/action_server_final/: angle_action_client.py  angle_action_server.py  prueba_camara.py
ros2_2pubsub/: package.xml  setup.cfg  setup.py
ros2_2pubsub/ros2_2pubsub/: publisher_function.py  subscriber_function.py
ros2_3package/: CMakeLists.txt  package.xml
ros2_3package/src/: num_aleatorios.cpp  num_aleatorios_subscriber.cpp
ros2_4pkg/: CMakeLists.txt  package.xml
ros2_4pkg/srv/: Data.srv
ros2_4secl/: package.xml  setup.cfg  setup.py
ros2_4secl/ros2_4secl/: client_function.py  service_function.py
ros2_5parametros/: package.xml  setup.cfg  setup.py
ros2_5parametros/ros2_5parametros/: parametros.py
