<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>action_definicion</name>
  <version>0.0.0</version>
  <description>Paquete que contiene la definicion del action</description>
  <maintainer email="est.paula.calvo@unimilitar.edu.co">alejo</maintainer>
  <license>Apache License 2.0</license>

  <!-- Herramientas de construcción -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Dependencias para acciones -->
  <depend>action_msgs</depend>

  <!-- Dependencias de pruebas -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Paquete marcado como un paquete de interfaces ROS -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

